<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tintos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optintos"
                android:textAlignment="center"
                android:textSize="16pt" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tinto1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_wine_bar_24"
                android:padding="5dp"
                android:text="@string/vinhotinto1"
                android:textAlignment="center"
                android:textSize="9pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_description_24"
                android:padding="5dp"
                android:text="@string/desctinto1"
                android:textAlignment="center"
                android:textSize="9pt" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_euro_24"
                android:padding="5dp"
                android:text="@string/precotinto1"
                android:textAlignment="center"
                android:textSize="9pt" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tinto2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_wine_bar_24"
                android:padding="5dp"
                android:text="@string/vinhotinto2"
                android:textAlignment="center"
                android:textSize="9pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_description_24"
                android:padding="5dp"
                android:text="@string/desctinto2"
                android:textAlignment="center"
                android:textSize="9pt" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_euro_24"
                android:text="@string/precotinto2"
                android:textAlignment="center"
                android:textSize="9pt" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tinto3" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableStart="@drawable/baseline_wine_bar_24"
                android:text="@string/vinhotinto3"
                android:textAlignment="center"
                android:textSize="9pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableStart="@drawable/baseline_description_24"
                android:text="@string/desctinto3"
                android:textAlignment="center"
                android:textSize="9pt" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableStart="@drawable/baseline_euro_24"
                android:text="@string/precotinto3"
                android:textAlignment="center"
                android:textSize="9pt" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>